[gd_scene load_steps=22 format=2]

[ext_resource path="res://Chars/decice/Legs.png" type="Texture" id=1]
[ext_resource path="res://Chars/decice/UpHead.png" type="Texture" id=2]
[ext_resource path="res://Chars/decice/RightHand.png" type="Texture" id=3]
[ext_resource path="res://Chars/decice/RightShoulder.png" type="Texture" id=4]
[ext_resource path="res://Chars/decice/LeftShoulder.png" type="Texture" id=5]
[ext_resource path="res://Chars/decice/LeftHand.png" type="Texture" id=6]
[ext_resource path="res://Chars/decice/Torso.png" type="Texture" id=7]
[ext_resource path="res://Chars/decice/RightArm.png" type="Texture" id=8]
[ext_resource path="res://Chars/decice/LeftArm.png" type="Texture" id=9]
[ext_resource path="res://Chars/decice/DEC ICE.gd" type="Script" id=10]
[ext_resource path="res://Chars/decice/icesparking.png" type="Texture" id=11]
[ext_resource path="res://Chars/decice/ice5.png" type="Texture" id=12]
[ext_resource path="res://Chars/decice/ice0.png" type="Texture" id=13]
[ext_resource path="res://Chars/decice/ice3.png" type="Texture" id=14]
[ext_resource path="res://Chars/decice/ice2.png" type="Texture" id=15]
[ext_resource path="res://Chars/decice/ice4.png" type="Texture" id=16]
[ext_resource path="res://Chars/decice/ice1.png" type="Texture" id=17]
[ext_resource path="res://Chars/decice/DownHead.png" type="Texture" id=18]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 5
particles_anim_loop = true

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 50.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 1.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="DEC ICE" type="Position2D"]
position = Vector2( 355, 289 )
scale = Vector2( 2, 2 )
script = ExtResource( 10 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 3, -54.5 )
process_material = SubResource( 2 )
texture = ExtResource( 11 )

[node name="Legs" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23.5, -37 )

[node name="Torso" type="Sprite" parent="Legs"]
position = Vector2( 0, -27 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( -18.5, -32 )

[node name="RightShoulder" type="Sprite" parent="Legs/Torso"]
position = Vector2( 19.5, -22 )
z_index = -1
texture = ExtResource( 4 )
centered = false
offset = Vector2( -4, -9 )

[node name="RightArm" type="Sprite" parent="Legs/Torso/RightShoulder"]
position = Vector2( 8, 6 )
texture = ExtResource( 8 )
offset = Vector2( 1, 8 )

[node name="RightHand" type="Sprite" parent="Legs/Torso/RightShoulder/RightArm"]
position = Vector2( 4, 18 )
z_index = -1
texture = ExtResource( 3 )
offset = Vector2( -1, 5.5 )

[node name="LeftShoulder" type="Sprite" parent="Legs/Torso"]
position = Vector2( -15.5, -26 )
z_index = -1
texture = ExtResource( 5 )
centered = false
offset = Vector2( -15, -10 )

[node name="LeftArm" type="Sprite" parent="Legs/Torso/LeftShoulder"]
position = Vector2( -8, 4 )
texture = ExtResource( 9 )
centered = false
offset = Vector2( -10, -3 )

[node name="LeftHand" type="Sprite" parent="Legs/Torso/LeftShoulder/LeftArm"]
position = Vector2( -5, 18 )
z_index = -1
texture = ExtResource( 6 )
offset = Vector2( 0.5, 4.5 )

[node name="DownHead" type="Sprite" parent="Legs/Torso"]
position = Vector2( 3, -26.5 )
texture = ExtResource( 18 )
centered = false
offset = Vector2( -17.5, -7.5 )

[node name="Ice" type="AnimatedSprite" parent="Legs/Torso/DownHead"]
position = Vector2( -11.5, -1.5 )
z_index = 1
frames = SubResource( 3 )
frame = 3
playing = true
centered = false

[node name="UpHead" type="Sprite" parent="Legs/Torso/DownHead"]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )
